--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,72 +59,81 @@
     <string name="band_open">Band is open!</string>
     <string name="format_notification">
         WSPR: <xliff:g id="description">%1$s</xliff:g>
-        band: <xliff:g id="bandName">%2$s</xliff:g>
+        band: <xliff:g id="bandName">%2$s;</xliff:g>
         SNR: <xliff:g id="snr">%3$s</xliff:g>
     </string>
 
-     <!-- Strings related to Notification Enabled preference -->
-     <string name="pref_notifications_key" translatable="false">notifications_key</string>
-     <string name="pref_notifications_label">WSPR Notifications</string>
-     <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
-     <string name="pref_enable_notifications_label">WSPR Notifications</string>
-     <string name="pref_enable_notifications_true">Enabled</string>
-     <string name="pref_enable_notifications_false">Not Enabled</string>
-     <string name="pref_enable_notifications_default" translatable="false">false</string>
-     <string name="pref_notify_band_label">Frequency band</string>
-     <string name="pref_notify_band_key">notify_band</string>
+    <!-- Strings related to Notification Enabled preference -->
+    <string name="pref_notifications_key" translatable="false">notifications_key</string>
+    <string name="pref_notifications_label">WSPR Notifications</string>
+    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
+    <string name="pref_enable_notifications_label">WSPR Notifications</string>
+    <string name="pref_enable_notifications_true">Enabled</string>
+    <string name="pref_enable_notifications_false">Not Enabled</string>
+    <string name="pref_enable_notifications_default" translatable="false">false</string>
+    <string name="pref_notify_key_tx_callsign" translatable="false">pref_notify_key_tx_callsign</string>
+    <string name="pref_notify_key_rx_callsign" translatable="false">pref_notify_key_rx_callsign</string>
+    <string name="pref_notify_key_tx_gridsquare" translatable="false">pref_notify_key_tx_gridsquare</string>
+    <string name="pref_notify_key_rx_gridsquare" translatable="false">pref_notify_key_rx_gridsquare</string>
+    <string name="pref_notify_key_min_tx_rx_distance" translatable="false">pref_notify_key_min_tx_rx_distance</string>
+    <string name="pref_notify_label_min_tx_rx_distance">min TX-RX distance (km)</string>
+
+    <string name="pref_notify_band_label">Frequency band</string>
+    <string name="pref_notify_band_key">notify_band</string>
     <string name="pref_notify_min_snr_label">Minimum SNR dBm</string>
     <string name="pref_notify_min_snr_key">min_snr</string>
     <!-- SNRs. Labels will be the same as the values! -->
-    <string name="pref_min_snr_value_m30">-30</string>
-    <string name="pref_min_snr_value_m20">-20</string>
-    <string name="pref_min_snr_value_m10">-10</string>
-    <string name="pref_min_snr_value_p0">0</string>
-    <string name="pref_min_snr_value_p10">10</string>
-    <string name="pref_min_snr_value_p20">20</string>
-    <string name="pref_min_snr_value_p30">30</string>
+    <string name="pref_min_snr_value_m30" translatable="false">-30</string>
+    <string name="pref_min_snr_value_m20" translatable="false">-20</string>
+    <string name="pref_min_snr_value_m10" translatable="false">-10</string>
+    <string name="pref_min_snr_value_p0"  translatable="false">0</string>
+    <string name="pref_min_snr_value_p10" translatable="false">10</string>
+    <string name="pref_min_snr_value_p20" translatable="false">20</string>
+    <string name="pref_min_snr_value_p30" translatable="false">30</string>
     <!-- frequency bands-these must match the band values, below -->
-    <string name="pref_band_label_LF">LF</string>
-    <string name="pref_band_label_MF">MF</string>
-    <string name="pref_band_label_160m">160m</string>
-    <string name="pref_band_label_80m">80m</string>
-    <string name="pref_band_label_60m">60m</string>
-    <string name="pref_band_label_40m">40m</string>
-    <string name="pref_band_label_30m">30m</string>
-    <string name="pref_band_label_20m">20m</string>
-    <string name="pref_band_label_17m">17m</string>
-    <string name="pref_band_label_15m">15m</string>
-    <string name="pref_band_label_12m">12m</string>
-    <string name="pref_band_label_10m">10m</string>
-    <string name="pref_band_label_6m">6m</string>
-    <string name="pref_band_label_4m">4m</string>
-    <string name="pref_band_label_2m">2m</string>
-    <string name="pref_band_label_70cm">70cm</string>
-    <string name="pref_band_label_23cm">23cm</string>
+    <string name="pref_band_label_any" translatable="false">any</string>
+    <string name="pref_band_label_LF" translatable="false">LF</string>
+    <string name="pref_band_label_MF" translatable="false">MF</string>
+    <string name="pref_band_label_160m" translatable="false">160m</string>
+    <string name="pref_band_label_80m" translatable="false">80m</string>
+    <string name="pref_band_label_60m" translatable="false">60m</string>
+    <string name="pref_band_label_40m" translatable="false">40m</string>
+    <string name="pref_band_label_30m" translatable="false">30m</string>
+    <string name="pref_band_label_20m" translatable="false">20m</string>
+    <string name="pref_band_label_17m" translatable="false">17m</string>
+    <string name="pref_band_label_15m" translatable="false">15m</string>
+    <string name="pref_band_label_12m" translatable="false">12m</string>
+    <string name="pref_band_label_10m" translatable="false">10m</string>
+    <string name="pref_band_label_6m" translatable="false">6m</string>
+    <string name="pref_band_label_4m" translatable="false">4m</string>
+    <string name="pref_band_label_2m" translatable="false">2m</string>
+    <string name="pref_band_label_70cm" translatable="false">70cm</string>
+    <string name="pref_band_label_23cm" translatable="false">23cm</string>
     <!-- frequency values are the approximate center of the band-these must match the band names above -->
-    <string name="pref_band_value_LF">0.5</string>
-    <string name="pref_band_value_MF">0.5</string>
-    <string name="pref_band_value_160m">1.85</string>
-    <string name="pref_band_value_80m">3.7</string>
-    <string name="pref_band_value_60m">5.35</string>
-    <string name="pref_band_value_40m">7.125</string>
-    <string name="pref_band_value_30m">10.125</string>
-    <string name="pref_band_value_20m">14.175</string>
-    <string name="pref_band_value_17m">18.11</string>
-    <string name="pref_band_value_15m">21.225</string>
-    <string name="pref_band_value_12m">24.93</string>
-    <string name="pref_band_value_10m">28.85</string>
-    <string name="pref_band_value_6m">52</string>
-    <string name="pref_band_value_4m">70</string>
-    <string name="pref_band_value_2m">146</string>
-    <string name="pref_band_value_70cm">432</string>
-    <string name="pref_band_value_23cm">1270</string>
+    <string name="pref_band_value_any" translatable="false">0</string>
+    <string name="pref_band_value_LF" translatable="false">0.05</string>
+    <string name="pref_band_value_MF" translatable="false">0.5</string>
+    <string name="pref_band_value_160m" translatable="false">1.85</string>
+    <string name="pref_band_value_80m" translatable="false">3.7</string>
+    <string name="pref_band_value_60m" translatable="false">5.35</string>
+    <string name="pref_band_value_40m" translatable="false">7.125</string>
+    <string name="pref_band_value_30m" translatable="false">10.125</string>
+    <string name="pref_band_value_20m" translatable="false">14.175</string>
+    <string name="pref_band_value_17m" translatable="false">18.11</string>
+    <string name="pref_band_value_15m" translatable="false">21.225</string>
+    <string name="pref_band_value_12m" translatable="false">24.93</string>
+    <string name="pref_band_value_10m" translatable="false">28.85</string>
+    <string name="pref_band_value_6m" translatable="false">52</string>
+    <string name="pref_band_value_4m" translatable="false">70</string>
+    <string name="pref_band_value_2m" translatable="false">146</string>
+    <string name="pref_band_value_70cm" translatable="false">432</string>
+    <string name="pref_band_value_23cm" translatable="false">1270</string>
 
     <!-- filtering strings -->
       <!-- labels -->
     <string name="pref_filters_label">Filters</string>
     <string name="pref_filter_enable_label">Filter</string>
-    <string name="pref_filters_wildcards">Filters: wildcards=\?\*</string>
+    <string name="pref_filters_wildcards">wildcards: \?*</string>
     <string name="pref_filter_label_match_all">Match all</string>
     <string name="pref_filter_label_tx_callsign">TX callsign</string>
     <string name="pref_filter_label_rx_callsign">RX callsign</string>
@@ -132,10 +141,10 @@
     <string name="pref_filter_label_rx_gridsquare">RX gridsquare</string>
     <!-- summary -->
     <string name="pref_filter_summary_match_all">and/or</string>
-    <string name="pref_filter_summary_tx_callsign">show only this TX callsign</string>
-    <string name="pref_filter_summary_rx_callsign">show only this RX callsign</string>
-    <string name="pref_filter_summary_tx_gridsquare">show only this TX gridsquare</string>
-    <string name="pref_filter_summary_rx_gridsquare">show only this RX gridsquare</string>
+    <string name="pref_filter_summary_tx_callsign">filter on this TX callsign</string>
+    <string name="pref_filter_summary_rx_callsign">filter on this RX callsign</string>
+    <string name="pref_filter_summary_tx_gridsquare">filter on this TX gridsquare</string>
+    <string name="pref_filter_summary_rx_gridsquare">filter on this RX gridsquare</string>
       <!-- keys -->
     <string name="pref_filters_key" translatable="false">filters_key</string>
     <string name="pref_filter_enable_key" translatable="false">enable_filter_key</string>
